p2/confs/app3.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-three
  labels:
    app: three
spec:
  replicas: 1
  selector:
    matchLabels:
      app: three
  template:
    metadata:
      labels:
        app: three
    spec:
      containers:
        - name: app-three
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: template
          configMap:
            name: app-three
        - name: html
          emptyDir: {}

---

apiVersion: v1
kind: Service
metadata:
  name: app-three
spec:
  type: ClusterIP
  selector:
    app: three
  ports:
    - protocol: TCP
      port: 80
